Reading config from the properties

--- a/src/main/resources/wisconsin_datagen.properties
+++ b/src/main/resources/wisconsin_datagen.properties
@@ -2,12 +2,13 @@
 workload=path
 
 # Connection details
-hostname=localhost
+hostname=34.211.46.152
 username=Administrator
 password=pass123
+port=8091
 
 # Bucket operation details
-bucketname=Test
+bucketname=sample
 
 # Deletes the bucket if it already exists and re-creates it
 isdeleteifbucketexists=true
