separated cardinality, filesize, filename, etc. setting from the workload and added it to properties file.

--- a/src/main/resources/wisconsin_datagen.properties
+++ b/src/main/resources/wisconsin_datagen.properties
@@ -1,5 +1,12 @@
 #Workload
-workload=path
+workload=wisconsin_1GB_std_zero_fixedLength_noBigObject.json
+cardinality=99999999
+filesize=-1
+batchsize=1000
+partitions=1
+fileoutput=wisconsin_40GB_std_zero_fixedLength_noBigObject.adm
+#options for writer: couchbase,file
+writer=file
 
 # Connection details
 hostname=localhost
