--- a/src/main/resources/wisconsin_datagen.properties
+++ b/src/main/resources/wisconsin_datagen.properties
@@ -1,6 +1,6 @@
 #Workload
-workload=wisconsin_1GB_std_zero_fixedLength_noBigObject.json
-cardinality=99999999
+workload=wisconsin_1GB_std_zero_fixedLength_noBigObject_3kbEachRecord.json
+cardinality=100
 filesize=-1
 batchsize=1000
 partitions=1
@@ -12,7 +12,7 @@ writer=file
 hostname=localhost
 username=Administrator
 password=pass123
-port=8091
+port=9000
 
 # Bucket operation details
 bucketname=sample
